# autonomous_slam

./: Meilensteinplan.xlsx  README.md  tutorial
src/: detection.py
src/amcl_localization/: CMakeLists.txt  package.xml
src/amcl_localization/launch/: custom_navigation.launch  localizer.launch
src/amcl_localization/param/: costmap_common_params_burger.yaml
src/amcl_localization/src/: localize_wall.py  update_initial_pose_estimate.py
src/camera/: CMakeLists.txt  package.xml
src/camera/launch/: camera.launch
src/camera/src/: color_picker.py  detection.py  hsv_range_finder.py  square_detection.py
src/explorer/: CMakeLists.txt  package.xml
src/explorer/launch/: explorer.launch
src/explorer/src/: explorer.py
src/m-explore/explore/launch/: explore.launch
src/positionsaver/: currentpos.py  position.py
src/rosbulla_navigate/: CMakeLists.txt  package.xml
src/rosbulla_navigate/launch/: coord_loaderandmover.launch  coord_masterlogic.launch  coord_movebase.launch  coord_navigater.launch  coord_saver.launch  coord_topic.launch  drive2postit.launch  path_planner.launch  pidWallFollower.launch  pixyfinder.launch
src/rosbulla_navigate/msg/: PixyBlock.msg  Servo.msg  coordinate.msg
src/rosbulla_navigate/scripts/: coord_loaderandmover.py  coord_master_logic.py  coord_movebase.py  coord_navigater.py  coord_saver.py  coord_topic.py  coords.csv  drive2postit copy.py  drive2postit.py  drive2postitwithgoal.py  path_planner.py  pidWallFollower.py  pixyfinder.py
